Fix GPU process lifetime UMA histograms.

There are a couple issues with the GPU process UMA histograms that this
CL fixes.

1. GPU.GPUProcessLifetimeEvents, DIED_FIRST_TIME was never incremented.
   The first crash had DIED_SECOND_TIME incremented instead. Increment
   crash count after UMA output instead.
2. When the GPU process was started for SwiftShader WebGL or to run the
   display compositor with OOP-D the wrong histogram had LAUNCHED
   incremented. Make launch and crash lifetime events use the same
   histogram.
3. Deprecate old histograms since fixes will make data difficult to
   compare. Add new histograms with improved descriptions.
4. Change histograms to record the recent crash count instead of total
   crash count. This provides information about outcome of the crash,
   for example if a feature gets disabled or not.
5. Fix GPUProcessLifetimeEvent enum description.
6. Mark GPU.SoftwareRendererLifetimeEvents as obsolete. As far as I can
   tell there is no UMA data ever recorded for it.
7. Make GpuProcessHost::GpuCrashCount() return the total number of GPU
   crashes for about://gpu.

Bug: 846333
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Icb74ec9c52b450c8c5154f513e825d224bb7ba9e
Reviewed-on: https://chromium-review.googlesource.com/1075513
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Reviewed-by: Mohsen Izadi <mohsen@chromium.org>
Reviewed-by: Alexis Hétu <sugoi@chromium.org>
Reviewed-by: Victor Miura <vmiura@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564345}
Former-commit-id: 2dd7c4195127ffe7f4445aee9ffe6a8636f86f38